# elastic-ai.runtime.enV5

./: .asciidoctorconfig  .clang-format  .commitlintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  .vale.ini  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTION.md  GITHUB_ENV  GLOSSAR.md  LICENSE  README.adoc  README.md  build.sh  build_debug.sh  build_release.sh  clean_all_targets.sh  cog.toml  commitlint.config.js  devenv.nix  eai_runtime_import.cmake  eai_runtime_init.cmake  enV5_init.cmake  example.csv  hardware_test.sh  helpers.cmake  mosquitto.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run_integration_test.sh  run_unittest.sh  (+4 more)
python_utils/: __init__.py  pyproject.toml
python_utils/bitfile_scripts/: HW-Test_Webserver.py  pyproject.toml
python_utils/bitfile_scripts/bitfiles/: led_test.bit
python_utils/experiment-protocol/: pyproject.toml
python_utils/experiment-protocol/test/: test_experiment_protocol.py
python_utils/test-framework/: pyproject.toml
python_utils/test-framework/src/: hw_test.py
python_utils/usb/: README.adoc  __init__.py  communication_base_protocol.py  communication_protocol.py  helper_utils.py  recommended_commands.py  test_communication_base_protocol.py  test_communication_protocol.py  test_recommended_commands.py  test_user_remote_control.py  user_remote_control.py
python_utils/usb-protocol/: .gitignore  README.md  pyproject.toml
python_utils/usb-protocol/src/: helper_utils.py  recommended_commands.py
python_utils/usb-protocol/test/: test_communication_base_protocol.py  test_recommended_commands.py
src/FreeRTOSUtils/: CMakeLists.txt  QueueWrapper.c  QueueWrapper.h  SemaphoreWrapper.c  SemaphoreWrapper.h  TaskWrapper.c  TaskWrapper.h
src/adxl345b/: Adxl345b.c  Adxl345b.h  Adxl345bInternal.h  Adxl345bTypedefs.h  CMakeLists.txt  adxl345b.c  adxl345b_internal.h  adxl345b_public.h  typedefs.h
src/adxl345b/include/: Adxl345b.h  Adxl345bTypedefs.h
src/ai/: CMakeLists.txt  ai.c
src/ai/CSVFiles/: label.csv
src/ai/csv_files/: distForCrossEntropy.csv  input.csv  label.csv
src/ai/helpers/: AiHelpers.c  CMakeLists.txt  CSVReader.c
src/ai/include/: ai.h
src/ai/loss_functions/: CMakeLists.txt  CrossEntropy.c  MSE.c
src/ai/nn/: CMakeLists.txt  Conv1d.c  Linear.c  ReLU.c  Softmax.c  softmax.c
src/ai/optim/: CMakeLists.txt  SGD.c
src/ai/quantization/: CMakeLists.txt  Float16.c  Float32.c  Quantization.c
src/broker/: CMakeLists.txt  MQTTBroker.c  MQTTBroker.h  MQTTBroker_internal.h  MqttBroker.c  MqttBroker.h  MqttBrokerInternal.h
src/common/: CMakeLists.txt
src/common/include/: Common.h
src/esp/: AT_commands.h  AtCommands.h  CMakeLists.txt  Esp.c  Esp.h  EspInternal.h  at_commands.h  esp.c  esp.h  espBase.c  espBase.h  espMQTT.c  espMQTT.h  espTCP.c  espTCP.h  esp_internal.h
src/espBroker/: CMakeLists.txt  espBroker.c  espBroker.h  espMQTTBroker.c  espMQTTBroker.h
src/experiment_protocol/: CMakeLists.txt  readme.md
src/experiment_protocol/src/: DataTransmission.h  ExperimentProtocol.c  StdIODataTransmission.c
src/filesystem/: CMakeLists.txt  FileSystem.c  FileSystemInternal.h
src/filesystem/include/: FileSystem.h
src/flash/: CMakeLists.txt  FileIterator.c  FileIterator.h  Flash.c  Flash.h  FlashInternal.h  FlashTypedefs.h  FlashWrite.c  README.adoc  README.md  flash.c  flash.h  typedefs.h
src/flash/include/: Flash.h  FlashTypedefs.h
src/fpgaConfig/: CMakeLists.txt  FpgaConfigDatahandler.c  FpgaConfigDatahandler.h  FpgaConfiguration.c  FpgaConfiguration.h  FpgaConfigurationHttp.c  FpgaConfigurationHttp.h  FpgaConfigurationInternal.h
src/fpgaConfigurationHandler/: CMakeLists.txt  FpgaConfigurationHandler.c  FpgaConfigurationHandlerHTTP.c  FpgaConfigurationHandlerInternal.h  FpgaConfigurationHandlerUSB.c
src/freeRtos/: CMakeLists.txt  FreeRTOSConfig.h  FreeRtosQueueWrapper.c  FreeRtosQueueWrapper.h  FreeRtosSMP.c  FreeRtosSMP.h  FreeRtosSemaphoreWrapper.c  FreeRtosSemaphoreWrapper.h  FreeRtosTaskWrapper.c  FreeRtosTaskWrapper.h  FreeRtosTaskWrapperInternal.h
src/middleware/: CMakeLists.txt  README.md  middleware.c  middleware.h  qxi.c  qxi.h
src/middleware/include/: middleware.h
src/modelStore/: CMakeLists.txt  ModelStore.c  ModelStore.h  modelStore.c  modelStore.h
src/network/: CMakeLists.txt  HTTP.c  HTTP.h  Network.c  Network.h  README.adoc  README.md  README.xml  http.c  http.h  tcp.c  tcp.h
src/pac193x/: CMakeLists.txt  Pac193x.c  Pac193x.h  Pac193xInternal.h  Pac193xTypedefs.h  pac193x.c  pac193x.h  pac193x_internal.h  pac193x_public.h  typedefs.h
src/rtos/: CMakeLists.txt  FreeRtosMutexWrapper.c  FreeRtosQueueWrapper.c  FreeRtosSMP.c  FreeRtosSemaphoreWrapper.c  FreeRtosTaskWrapper.c  README.adoc  README.md
src/sha256/: BinaryArithmeticAbstraction.c  BinaryArithmeticAbstraction.h  CMakeLists.txt  Sha256.c  Sha256.h
src/sht3x/: CMakeLists.txt  Sht3x.c  Sht3x.h  Sht3xInternal.h  Sht3xTypedefs.h  sht3x.c  sht3x.h  sht3x_internal.h  sht3x_public.h  typedefs.h
src/spi/: CMakeLists.txt  Spi.c  Spi.h  SpiHardwareAdapter.c  SpiHardwareAdapter.h  SpiHardwareAdapterInternal.h  SpiInternal.h  SpiTypedefs.h  spi.c  spi.h  spi_handler.c  spi_handler.h
src/usb_protocol/: CMakeLists.txt  DefaultCommands.c  DefaultCommands.h  Protocol.c  Tools.c
test/hardware/: CMakeLists.txt  hardwareTestHelper.c
test/unit/: CMakeLists.txt  UnitTestAdxl345b.c  UnitTestFpgaConfigurationHandler.c  UnitTestHttp.c  UnitTestMqttBroker.c  UnitTestNetwork.c  UnitTestPac193.c  UnitTestPac193x.c  UnitTestSht3x.c  UnitTestai.c  UnittestAdxl345b.c  UnittestBinaryArithmeticAbstraction.c  UnittestConfiguration.c  UnittestConfigurationHttp.c  UnittestFlash.c  UnittestFpgaConfigurationHandler.c  UnittestHTTP.c  UnittestModelStore.c  UnittestMqtt.c  UnittestNetwork.c  UnittestPac193x.c  UnittestSha256.c  UnittestSht3x.c  UnittestXorChecksum.c  test_adxl345b.c  test_configuration.c  test_esp.c  test_modelStore.c  test_mqtt.c  test_network.c  test_pac193x.c  test_sht3x.c  unit_test.cmake
(+585 files in other folders)
