[tool.poetry]
name = "elasticai.runtime.env5"
version = "0.1.0"
description = ""
authors = ["Department Embedded Systems - University Duisburg Essen"]
license = "MIT"
readme = "README.adoc"
packages = [{include = "elasticai/runtime/env5", from="python_utils" }]

[tool.poetry.dependencies]
python = ">= 3.10"
pyserial = "3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
