[project]
name = "elasticai.usbprotocol"
dynamic = ["version"]
authors = [
    { name = "Intelligent Embedded Systems - University Duisburg Essen" },
]
license = { text = "MIT" }
description = "USB-Protocol to interact with elastic Node."
readme = "python_utils/usb-protocol/README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_utils/usb-protocol/elasticai"]
exclude = [
    "*_test.py",
    "test_*.py"
]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
lsp = [
    "pynvim>=0.5.2",
]
