[project]
name = "elasticai.testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [

]
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elasticai"]

[tool.uv.workspace]
members = ["src/elasticai/testing"]
