[project]
authors = [
    { name = "Intelligent Embedded Systems - University Duisburg Essen" },
]
license = { text = "MIT" }
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
testing = "testing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
