[project]
authors = [
    { name = "Intelligent Embedded Systems - University Duisburg Essen" },
]
license = { text = "MIT" }
name = "elasticai.runtime.usbprotocol"
version = "0.1.0"
description = "USB-Protocol to interact with elastic Node."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]
