add_subdirectory(Helper)
add_subdirectory(TestFreeRTOS)
add_subdirectory(Esp)
add_subdirectory(TestNetworking)
add_subdirectory(TestFlash)
add_subdirectory(TestConfiguration)
add_subdirectory(Sensors)
add_subdirectory(TestStub)
add_subdirectory(TestFlowPrediction)
add_subdirectory(TestMiddleware)
add_subdirectory(TestFlashFileSystem)
add_subdirectory(TestUsbProtocol)
add_subdirectory(AutomatedHWTests)
add_subdirectory(Ai)

